# raidhos

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/priv-helper/: Cargo.toml
crates/priv-helper/src/: main.rs
crates/ui-tauri/: Cargo.toml  README.md  tauri.conf.json
crates/ui-tauri/frontend/: index.html
crates/ui-tauri/src/: main.rs
crates/ui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/ui-tauri/src-tauri/src/: grub.rs  main.rs
docs/: ARCHITECTURE.md  BOOT_CONFIG_SCHEMA.json  PAYLOAD.md  ROADMAP.md  TAURI_NOTES.md
packaging/linux/: org.raidhos.policy
payload/: manifest.json
tools/grub/: Dockerfile  README.md  build_grub.sh  grub.cfg
