[package]
name = "raidhos-ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
raidhos-core = { path = "../../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["api-all"] }

[features]
# this feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
